Theme Version: 2.1.1 Post live launch bug fixes - Case study padding fix - Mobile nav close event handler fix - Our history progress bar z-index - Show/hide forms scrollTo bugfix - News Feed title output logic - Step slider remove margin between slides

--- a/sass/design/components/_our-history.scss
+++ b/sass/design/components/_our-history.scss
@@ -1247,6 +1247,6 @@ Our History
   height: 6px;
   width: 0%;
   background-color: #007bff;
-  z-index: 1000;
+  z-index: 9;
   transition: width 0.1s ease-out;
 }
