--- a/sass/design/components/_step-slider.scss
+++ b/sass/design/components/_step-slider.scss
@@ -10,10 +10,6 @@
     gap: 50px;
   }
 
-  &__slide {
-    margin-bottom: 30px;
-  }
-
   &__overline,
   &__title {
     border-bottom: solid 1px;
@@ -38,7 +34,7 @@
     &__slide {
       position: sticky;
       top: calc(var(--header-height) + 30px);
-      margin: 0 0 30px 0;
+      margin: 0 0 0 0;
       max-width: none;
       overflow: hidden;
     }
