--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: David Park
 Author URI: http://underscores.me/
 Description: Description
-Version: 2.1.0
+Version: 2.1.1
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -4485,9 +4485,6 @@ a.read-more.hl.arrow:focus::after {
   flex-direction: column;
   gap: 50px;
 }
-.step-slider__slide {
-  margin-bottom: 30px;
-}
 .step-slider__overline,
 .step-slider__title {
   border-bottom: solid 1px;
@@ -4510,7 +4507,7 @@ a.read-more.hl.arrow:focus::after {
   .step-slider__slide {
     position: sticky;
     top: calc(var(--header-height) + 30px);
-    margin: 0 0 30px 0;
+    margin: 0 0 0 0;
     max-width: none;
     overflow: hidden;
   }
@@ -5290,7 +5287,7 @@ html:has(.zf-history) {
   height: 6px;
   width: 0%;
   background-color: #007bff;
-  z-index: 1000;
+  z-index: 9;
   transition: width 0.1s ease-out;
 }
 
